// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`casters casters: change adds casters 1`] = `
"<div class=\\"space caster-container\\" id=\\"caster-container_castertwo\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_castertwo\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_castertwo\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_castertwo\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_castertwo\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_castertwo\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_castertwo\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_castertwo\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_castertwo\\">remove</button>
    </div></div><div class=\\"space caster-container\\" id=\\"caster-container_casterone\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_casterone\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_casterone\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_casterone\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_casterone\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_casterone\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_casterone\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_casterone\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_casterone\\">remove</button>
    </div></div>"
`;

exports[`casters casters: change handles casters being added and updated 1`] = `
"<div class=\\"space caster-container\\" id=\\"caster-container_castertwo\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_castertwo\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_castertwo\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_castertwo\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_castertwo\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_castertwo\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_castertwo\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_castertwo\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_castertwo\\">remove</button>
    </div></div><div class=\\"space caster-container\\" id=\\"caster-container_casterone\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_casterone\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_casterone\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_casterone\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_casterone\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_casterone\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_casterone\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_casterone\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_casterone\\">remove</button>
    </div></div>"
`;

exports[`casters casters: change handles casters being added and updated 2`] = `
"<div class=\\"space caster-container\\" id=\\"caster-container_casterthree\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_casterthree\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_casterthree\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_casterthree\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_casterthree\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_casterthree\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_casterthree\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_casterthree\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_casterthree\\">remove</button>
    </div></div><div class=\\"space caster-container\\" id=\\"caster-container_castertwo\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_castertwo\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_castertwo\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_castertwo\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_castertwo\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_castertwo\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_castertwo\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_castertwo\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_castertwo\\">remove</button>
    </div></div><div class=\\"space caster-container\\" id=\\"caster-container_casterone\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_casterone\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_casterone\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_casterone\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_casterone\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_casterone\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_casterone\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_casterone\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_casterone\\">remove</button>
    </div></div>"
`;

exports[`casters casters: change handles casters being removed 1`] = `
"<div class=\\"space caster-container\\" id=\\"caster-container_castertwo\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_castertwo\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_castertwo\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_castertwo\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_castertwo\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_castertwo\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_castertwo\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_castertwo\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_castertwo\\">remove</button>
    </div></div><div class=\\"space caster-container\\" id=\\"caster-container_casterone\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_casterone\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_casterone\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_casterone\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_casterone\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_casterone\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_casterone\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_casterone\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_casterone\\">remove</button>
    </div></div>"
`;

exports[`casters casters: change handles casters being removed 2`] = `
"<div class=\\"space caster-container\\" id=\\"caster-container_casterone\\">
    <div class=\\"select-container\\">
        <label for=\\"caster-name-input_casterone\\">Name</label>
        <input type=\\"text\\" id=\\"caster-name-input_casterone\\">
    </div>
    <div class=\\"layout horizontal select-container\\">
        <div class=\\"select-container caster-twitter-input-container\\">
            <label for=\\"caster-twitter-input_casterone\\">Twitter</label>
            <input type=\\"text\\" id=\\"caster-twitter-input_casterone\\">
        </div>
        <div class=\\"select-container\\">
            <label for=\\"caster-pronoun-input_casterone\\">Pronouns</label>
            <input type=\\"text\\" id=\\"caster-pronoun-input_casterone\\">
        </div>
    </div>
    <div class=\\"layout horizontal\\">
        <button class=\\"update-button max-width\\" id=\\"update-caster_casterone\\" style=\\"background-color: var(--blue)\\">
            update
        </button>
        <button class=\\"red max-width\\" id=\\"remove-caster_casterone\\">remove</button>
    </div></div>"
`;
